<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    tools:context="com.example.fanto.calculator.MainActivity">

    <TextView
        android:maxLines="2"
        android:text="@string/zero"
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/border"
        android:gravity="center|end"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:textColor="#000"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border">

        <Button
            android:id="@+id/clear_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/clear"
            android:textColor="#000" />

        <Button
            android:id="@+id/divide_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/divide"
            android:textColor="#000" />

        <Button
            android:id="@+id/modulus_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/modulus"
            android:textColor="#000" />

        <Button
            android:id="@+id/del_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/delete"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border">

        <Button
            android:id="@+id/seven_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/seven"
            android:textColor="#000" />

        <Button
            android:id="@+id/eight_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/eight"
            android:textColor="#000" />

        <Button
            android:id="@+id/nine_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/nine"
            android:textColor="#000" />

        <Button
            android:id="@+id/multiply_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/multiply"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border">

        <Button
            android:id="@+id/four_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/four"
            android:textColor="#000" />

        <Button
            android:id="@+id/five_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/five"
            android:textColor="#000" />

        <Button
            android:id="@+id/six_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/six"
            android:textColor="#000" />

        <Button
            android:id="@+id/minus_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/minus"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border">

        <Button
            android:id="@+id/one_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/one"
            android:textColor="#000" />

        <Button
            android:id="@+id/two_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/two"
            android:textColor="#000" />

        <Button
            android:id="@+id/three_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/three"
            android:textColor="#000" />

        <Button
            android:id="@+id/plus_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/add"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border">

        <Button
            android:id="@+id/dot_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/dot"
            android:textColor="#000" />

        <Button
            android:id="@+id/zero_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/zero"
            android:textColor="#000" />

        <Button
            android:id="@+id/negative_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/negative"
            android:textColor="#000" />

        <Button
            android:id="@+id/equal_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/keypad_border"
            android:text="@string/equal"
            android:textColor="#000" />
    </LinearLayout>
</LinearLayout>

